Correct event accommodation fee

--- a/accomodation/templates/accommodation/accommodation.html
+++ b/accomodation/templates/accommodation/accommodation.html
@@ -30,7 +30,7 @@
                 <p style="color:red">
                     The online registration is now closed. For offline registration visit
                     the Registration Desk. The offline 
-                    accommodation fee is Rs. 600/day (<b>no meals included</b>).
+                    accommodation fee is Rs. 600 (<b>no meals included</b>).
                 </p>
                 <br>
             </div>
