Gen CA Certificate

--- a/accomodation/templates/accommodation/accommodation.html
+++ b/accomodation/templates/accommodation/accommodation.html
@@ -26,14 +26,14 @@
 <section class="our-ticket-pricing-table-area section-padding-100-0">
     <div class="container">
         <div class="row">
-            <div class="col-12">
+            <!-- <div class="col-12">
                 <p style="color:red">
                     The online registration is now closed. For offline registration visit
                     the Registration Desk. The offline 
                     accommodation fee is Rs. 600 (<b>no meals included</b>).
                 </p>
                 <br>
-            </div>
+            </div> -->
             <!-- Single Ticket Pricing Table -->
             <div class="col-12 col-md-6 col-lg-6">
                 <div class="single-ticket-pricing-table text-center wow fadeInUp" data-wow-delay="300ms">
