--- a/main_page/templates/main_page/workshop.html
+++ b/main_page/templates/main_page/workshop.html
@@ -39,12 +39,12 @@ background: linear-gradient(to right, #fbc7d4, #9796f0); /* W3C, IE 10+/ Edge, F
                                     provide
                                     accomodation at cheaper rates.
                                     Get accomodation @ Rs.250 per day and enjoy a relaxing stay with 2 meals included.
-                                    <br>
+                                    <!-- <br>
                                     <span style="color:red">
                                         UPDATE: The online workshop accommodation registration is now closed. For offline registration visit
                                         the Registration Desk. The offline workshop
                                         accommodation fee is Rs. 250/day (<b>no meals included)</b>.
-                                    </span>
+                                    </span> -->
                                 </li><br>
                                 <a href="{% url 'main_page:get_workshop_accommodation'  %}" class="btn confer-btn-white"
                                     style="border: 2px solid rgb(43, 2, 143); color: black;"
