Change workshop page redirect

--- a/main_page/templates/main_page/base.html
+++ b/main_page/templates/main_page/base.html
@@ -57,7 +57,7 @@
                                 <li><a href="{% url 'main_page:events'%}">Events</a></li>
                                 <li><a href="{% url 'main_page:talks'%}">Lectures</a></li>
                                 <li><a href="{% url 'techconnect:index'%}">TechConnect</a></li>
-                                <li><a href="https://www.anfeidrol.com/workshop-registration">Workshops</a></li>
+                                <li><a href="{% url 'main_page:workshop'%}">Workshops</a></li>
                                 <li><a href="{% url 'main_page:sponsors'%}">Sponsors</a></li>
                                 <li><a href="{% url 'main_page:swe' %}">SWE</a></li>
 
