Change tecchonect buttun name

--- a/techconnect/templates/techconnect/college.html
+++ b/techconnect/templates/techconnect/college.html
@@ -31,7 +31,7 @@
                                     <a href="{% url 'techconnect:workshop_register' workshop.id %}" class="btn confer-btn-white"
                                         style="border: 2px solid rgb(43, 2, 143); color: black;"
                                         onmouseover="this.style.color='#ffffff'" onmouseout="this.style.color='#000000'">
-                                        Register</a>
+                                        Register/Pay</a>
                                     <br>
                                 </div>
                                 <br>
