Update workshop info.

--- a/main_page/templates/main_page/benefits_n_certification.html
+++ b/main_page/templates/main_page/benefits_n_certification.html
@@ -14,10 +14,10 @@
                     <ul>
                         <li>1. A digital toolkit of PPTs and study material for all participants of the workshop.</li>
                         <li>2. Certificate of Participation for every participant.</li>
-                        <li>3. A competition will be organized at the end of the workshop and winners will be awarded with
+                        {# <li>3. A competition will be organized at the end of the workshop and winners will be awarded with #}
                         Certificate of Excellence.</li>
-                        <li>4. Six months online support related to the workshop course content.</li>
-                        <li>5. Internship opportunity for prospective students.</li>
+                        <li>3. Six months online support related to the workshop course content.</li>
+                        <li>4. Internship opportunity for prospective students.</li>
                     </ul>
                     <br>
                     <h3>Prerequisites & Eligibility</h3>
