--- a/main_page/templates/main_page/workshop.html
+++ b/main_page/templates/main_page/workshop.html
@@ -23,50 +23,37 @@ background: linear-gradient(to right, #fbc7d4, #9796f0); /* W3C, IE 10+/ Edge, F
                             <br>
                             <ul>
                                 <li style="list-style-type:disc; text-align: left;">
-                                    Step 1: Register for the workshops.
+                                    Step 1. Click on "Register Now"
                                 </li>
                                 <li style="list-style-type:disc; text-align: left;">
-                                    Step 2: [Optional] Get accomodation. <a
-                                        href="{% url 'main_page:get_workshop_accommodation' %}"
-                                        style="color: blue;">(Click
-                                        Here)</a>
+                                    Step 2. Register for the workshop and make the payment
+                                </li>
+                                <li style="list-style-type:disc; text-align: left;">
+                                    Step 3. You'll receive an email with classroom link 24 hrs prior to class.
                                 </li>
                             </ul>
                             <br>
                             <h3>Important Note</h3>
                             <ul>
-                                <li style="text-align: justify;">1. Exclusively for the workshop participants, we
-                                    provide
-                                    accomodation at cheaper rates.
-                                    Get accomodation @ Rs.250 per day and enjoy a relaxing stay with 2 meals included.
-                                    <!-- <br>
-                                    <span style="color:red">
-                                        UPDATE: The online workshop accommodation registration is now closed. For offline registration visit
-                                        the Registration Desk. The offline workshop
-                                        accommodation fee is Rs. 250/day (<b>no meals included)</b>.
-                                    </span> -->
+                                <li style="text-align: justify;">
+                                The complete workshop including projects and hand-on session will be conducted in online mode on ZOOM platform.
                                 </li><br>
                                 <a href="{% url 'main_page:get_workshop_accommodation'  %}" class="btn confer-btn-white"
                                     style="border: 2px solid rgb(43, 2, 143); color: black;"
                                     onmouseover="this.style.color='#ffffff'" onmouseout="this.style.color='#000000'">
-                                    <i class="zmdi zmdi-hotel zmdi-hc-lg"> Get Accomodation</i></a>
+                                    Sample Certificate</i></a>
                                 <br><br>
-                                <li style="text-align: justify;">2. A single participant may opt to attend two workshops
-                                    (One on
-                                    'Personality Development and Placement
-                                    Preparation' and other on any one of the below mentioned technical topics.)
+                            </ul>
+                            <h3>Requirements from Participants</h3>
+                            <ul>
+                                <li style="text-align: justify;">
+                                    A laptop/PC (with a minimum of 2 GB RAM, 100 GB HDD, Intel i3+ processor) with proper internet connection.
                                 </li>
-                                <li style="text-align: justify;"><br>If you are a Campus Ambassador for ADVITIYA, you
-                                    can register
-                                    for any of the workshops listed here for free. Get 10 people to register for some
-                                    workshop and refer you
-                                    after payment. Thereafter, you may register for any workshop for free.
-                                </li><br>
-                                <li style="text-align: justify;">After you register for some workshop, you may give
-                                    credit for
-                                    registration to some of our Campus Ambassador. If you have already registered,
-                                    <a href="{% url 'main_page:reffer_ca' %}">click here</a> to give them credits.
-                                </li><br>
+                            </ul>
+                            <br>
+                            <ul>
+                            <p style="color:black"><i class="fa fa-phone mr-3"></i>Helpline Number
+                                <a href="tel:+91-7409146082" style="color: black;">7409146082</a></p>
                             </ul>
                         </div>
                     </div>
