Update benefites & certificate.

--- a/main_page/templates/main_page/benefits_n_certification.html
+++ b/main_page/templates/main_page/benefits_n_certification.html
@@ -14,10 +14,9 @@
                     <ul>
                         <li>1. A digital toolkit of PPTs and study material for all participants of the workshop.</li>
                         <li>2. Certificate of Participation for every participant.</li>
-                        {# <li>3. A competition will be organized at the end of the workshop and winners will be awarded with #}
-                        Certificate of Excellence.</li>
-                        <li>3. Six months online support related to the workshop course content.</li>
-                        <li>4. Internship opportunity for prospective students.</li>
+                        <li>3. Recorded lectures of the workshop will be provided.</li>
+                        <li>4. Six months online support related to the workshop course content.</li>
+                        <li>5. Internship opportunity for prospective students.</li>
                     </ul>
                     <br>
                     <h3>Prerequisites & Eligibility</h3>
@@ -28,13 +27,6 @@
                             however, anybody can join this training even from a different department.</li>
                         <li>3. Any B.Tech/ BE/ BCA/ BSc/ M.Tech/ ME/ MCA/ MSc or any UG or PG/PhD student can attend these workshops to 
                             enhance his/her skills.</li>
-                    </ul>
-                    <br>
-                    <h3>Requirements from Participants</h3>
-                    <ul>
-                        <li>1. A laptop/PC (with a minimum of 2 GB RAM, 100 GB HDD, Intel i3+ processor) in a group of 5 students or 
-                            individual.</li>
-                        <li>2. Internet Connection/Wi-Fi for Laptop/PC (Not Mandatory).</li>
                     </ul>
                     <br>
                     <h3>Terms & Conditions</h3>
