change workshop date.

--- a/main_page/templates/main_page/workshop.html
+++ b/main_page/templates/main_page/workshop.html
@@ -99,7 +99,7 @@ background: linear-gradient(to right, #fbc7d4, #9796f0); /* W3C, IE 10+/ Edge, F
                     {% else %}
                     <div class="post-meta">
                         <a class="post-date"><i class="zmdi zmdi-time-interval"></i> 2 Days</a><br>
-                        <a class="post-date"><i class="zmdi zmdi-calendar-check"></i> 25th & 26th July, 2020</a>
+                        <a class="post-date"><i class="zmdi zmdi-calendar-check"></i> 1st & 2nd August, 2020</a>
                     </div>
                     {% endif %}
                     <div class="post-meta">
