--- a/main_page/templates/main_page/workshop.html
+++ b/main_page/templates/main_page/workshop.html
@@ -86,20 +86,20 @@ background: linear-gradient(to right, #fbc7d4, #9796f0); /* W3C, IE 10+/ Edge, F
                         </center>
                     </div>
                     <h5>{{workshop.name}}</h5>
-                    {% if workshop.name == "Personality Development and Placement Preparation" %}
+                    {% if workshop.id == 1 %}
                     <div class="post-meta">
-                        <a class="post-date"><i class="zmdi zmdi-time-interval"></i> 1 Day</a><br>
-                        <a class="post-date"><i class="zmdi zmdi-calendar-check"></i> 7th February, 2020</a>
+                        <a class="post-date"><i class="zmdi zmdi-time-interval"></i> 2 Day</a><br>
+                        <a class="post-date"><i class="zmdi zmdi-calendar-check"></i> 24th & 25th October, 2020</a>
                     </div>
-                    {% elif workshop.name == "Social Media Marketing & SEO Details" %}
+                    {% elif workshop.id == 2 %}
                     <div class="post-meta">
                         <a class="post-date"><i class="zmdi zmdi-time-interval"></i> 2 Days</a><br>
-                        <a class="post-date"><i class="zmdi zmdi-calendar-check"></i> 7th & 8th February, 2020</a>
+                        <a class="post-date"><i class="zmdi zmdi-calendar-check"></i> 31st October & 1st November, 2020</a>
                     </div>
                     {% else %}
                     <div class="post-meta">
                         <a class="post-date"><i class="zmdi zmdi-time-interval"></i> 2 Days</a><br>
-                        <a class="post-date"><i class="zmdi zmdi-calendar-check"></i> 24th & 25th October, 2020</a>
+                        <a class="post-date"><i class="zmdi zmdi-calendar-check"></i> 7th & 8th November, 2020</a>
                     </div>
                     {% endif %}
                     <div class="post-meta">
