Change workshop date.

--- a/main_page/templates/main_page/workshop.html
+++ b/main_page/templates/main_page/workshop.html
@@ -89,12 +89,12 @@ background: linear-gradient(to right, #fbc7d4, #9796f0); /* W3C, IE 10+/ Edge, F
                     {% if workshop.id == 1 %}
                     <div class="post-meta">
                         <a class="post-date"><i class="zmdi zmdi-time-interval"></i> 2 Day</a><br>
-                        <a class="post-date"><i class="zmdi zmdi-calendar-check"></i> 24th & 25th October, 2020</a>
+                        <a class="post-date"><i class="zmdi zmdi-calendar-check"></i> 28th & 29th November, 2020</a>
                     </div>
                     {% elif workshop.id == 2 %}
                     <div class="post-meta">
                         <a class="post-date"><i class="zmdi zmdi-time-interval"></i> 2 Days</a><br>
-                        <a class="post-date"><i class="zmdi zmdi-calendar-check"></i> 31st October & 1st November, 2020</a>
+                        <a class="post-date"><i class="zmdi zmdi-calendar-check"></i> 21st & 22nd November, 2020</a>
                     </div>
                     {% else %}
                     <div class="post-meta">
