--- a/main_page/templates/main_page/base.html
+++ b/main_page/templates/main_page/base.html
@@ -57,9 +57,9 @@
                                 <li><a href="{% url 'main_page:events'%}">Events</a></li>
                                 <li><a href="{% url 'main_page:talks'%}">Lectures</a></li>
                                 <!-- <li><a href="{% url 'techconnect:index'%}">TechConnect</a></li> -->
-                                <li><a href="https://bit.ly/advitiyaiitrpr">TechConnect</a></li>
+                                <li><a href="https://bit.ly/advitiyaiitrpr">Winter Training</a></li>
                                 <!-- <li><a href="{% url 'main_page:workshop'%}">Workshops</a></li> -->
-                                <li><a href="https://imojo.in/mlandai">Workshops</a></li>
+                                <li><a href="https://imojo.in/mlandai">Online Workshop</a></li>
                                 <li><a href="{% url 'main_page:sponsors'%}">Sponsors</a></li>
                                 <li><a href="{% url 'main_page:swe' %}">SWE</a></li>
 
